# spoonerize

./: LICENSE.txt  Main.hs  README.md  spoonerize.cabal
Text/: Spoonerize.hs
